# SQLiteCppWrapper

./: CMakeLists.txt
include/: SQLiteBackup.hpp  SQLiteDatabase.hpp  SQLiteException.hpp  SQLiteStatement.hpp  SQLiteWrapper.hpp
src/: SQLiteBackup.cpp  SQLiteDatabase.cpp  SQLiteStatement.cpp
